tests/snapshots/tui_snapshot__tui_input_bash_mode.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  ctrl+t: thi...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions

  Welcome to Pi!
  Type a message to begin, or /help for commands.
  Use /setup to configure provider, model, API URL, and API key.

  Enter: send  Shift+Enter: newline  Alt+Enter: mult...  [thinking: off]  [bash]
  │ > !ls -la
  │ >
  │ >

  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
