tests/snapshots/tui_snapshot__tui_input_multi_line.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  ctrl+t: thi...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions

  Welcome to Pi!
  Type a message to begin, or /help for commands.
  Use /setup to configure provider, model, API URL, and API key.

  Alt+Enter: send  Enter: newline  Esc: single-line  [thinking: off]
  │ > first line
  │ > second line
  │ >
  │ >
  │ >
  │ >

  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
